# llm-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.yml  gateway.yaml  gateway.yaml.example  pyproject.toml
docs/: 2026-06-05-llm-gateway-design.md  2026-06-07-audit-backends-design.md  DEVLOG.md  architecture.html
docs/adr/: 001-python-stack.md  002-asgi-middleware.md  004-sync-audit.md  005-middleware-order.md
docs/en/: 2026-06-05-llm-gateway-design.md  2026-06-06-pii-sanitizer-design.md  2026-06-07-audit-backends-design.md  2026-06-09-layered-architecture-design.md  2026-06-10-streaming-design.md  2026-06-12-restoration-design.md  2026-06-12-tools-passthrough-design.md  DEVLOG.md  architecture.html
docs/ru/: 2026-06-05-llm-gateway-design.md  2026-06-06-pii-sanitizer-design.md  2026-06-09-layered-architecture-design.md  2026-06-10-streaming-design.md  2026-06-12-restoration-design.md  2026-06-12-tools-passthrough-design.md  DEVLOG.md  architecture.html
examples/: custom_adapter.py  custom_audit_backend.py  custom_auth_provider.py
gateway/: app.py  config.py  routes.py
gateway/adapters/: base.py  openai_compatible.py  registry.py
gateway/application/: chat_service.py
gateway/audit/: __init__.py  base.py  file_backend.py  record.py  stdout_backend.py
gateway/domain/: exceptions.py  models.py
gateway/middleware/: audit.py  auth.py  sanitize.py
gateway/sanitizers/: base.py  passthrough.py  pii_regex.py
tests/: conftest.py
tests/integration/: test_middleware_stack.py
tests/unit/: test_adapters.py  (+12 more)
(+25 files in other folders)
